# ISearch

./: .cursorignore  FINISHED.md  LICENSE  OPTIMIZATION.md  README.md  build.sh  package.json
docs/: api-design.md  architecture.md  product-requirements.md
scripts/: copy-frontend.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs
src-tauri/src/core/: channel_writer.rs  clamav_scanner.rs  database.rs  delta_tracker.rs  fs_indexer.rs  fst_index.rs  indexer.rs  inverted_index.rs  lmdb_store.rs  metadata_store.rs  mod.rs  native_indexer.rs  search.rs  sharded_fst.rs  watcher.rs
src/routes/: +layout.svelte  +page.svelte
