[package]
name = "isearch"
version = "0.1.0"
description = "ISearch - Fast file search for macOS"
authors = ["ISearch Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"

# Storage (replacing SQLite with LMDB + FST)
fst = { version = "0.4", features = ["levenshtein"] }
heed = "0.20"
crossbeam-channel = "0.5"
bincode = "1.3"
memmap2 = "0.9"

# File traversal
walkdir = "2.4"

# Date/time
chrono = "0.4"

# Async
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
dirs = "5.0"
regex = "1.10"

# File monitoring
notify = "6.1"

# ClamAV antivirus scanning
clamav-sys = "1.0"

# Dialog for directory picker
tauri-plugin-dialog = "2"
